--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
-  "dependencies": {
-    "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2"
-  }
+  "dependencies": {}
 }
