add tsconfig configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "strict": true,
     "allowJs": true,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modues"]
 }
