--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,8 @@
     "requireConfigFile": false,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-floating-promises": "off"
+  }
 }
