--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.6.5",
+    "puppeteer": "^21.7.0"
+  }
 }
