--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "node dist/server.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "express": "^4.18.2",
     "puppeteer": "^21.7.0"
   }
 }
