--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.js"
   },
+  "dependencies": {
+    "axios": "^1.6.5",
+    "express": "^4.18.2",
+    "puppeteer": "^21.7.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -30,10 +37,5 @@
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "axios": "^1.6.5",
-    "express": "^4.18.2",
-    "puppeteer": "^21.7.0"
   }
 }
